--- a/src/app/components/student-table/student-table.component.html
+++ b/src/app/components/student-table/student-table.component.html
@@ -1,17 +1,38 @@
+<div class="table-filters">
+    <select 
+        [(ngModel)]="selectedCourse" 
+        (change)="onCourseFilterChange()"
+        class="course-filter"
+    >
+        <option [value]="null">Todos los cursos</option>
+        <option *ngFor="let course of courses" [value]="course">
+            {{ course }}
+        </option>
+    </select>
+    <button *ngIf="selectedCourse" (click)="clearFilter()" class="clear-filter">
+        Limpiar filtro
+    </button>
+</div>
+
 <table>
     <thead>
         <tr>
             <th>#</th>
             <th>Nombre</th>
+            <th>Curso</th>
             <th>Nota</th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
-        <ng-container *ngFor="let student of students; let i = index">
+        <ng-container *ngFor="let student of filteredStudents; let i = index">
         <tr *ngIf="student &&student.name">
             <td class="number">{{i+1}}</td>
             <td>
                 <div class="student-name">{{student.name}}</div>
+            </td>
+            <td>
+                <div class="student-course">{{student.course}}</div>
             </td>
             <td>
                 <div class="student-score">{{student.score}}</div>
